...

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@drawable/src"
        android:gravity="center"
        android:id="@+id/ingredient_layout"
        android:padding="20dp"
        >

        <RelativeLayout
            android:alpha="0.9"
            android:layout_marginTop="20dp"
...
            android:layout_marginRight="10dp"
            android:background="@drawable/rounded_bg_text_input"
            android:focusableInTouchMode="true"
            android:gravity="center"
            android:paddingLeft="5dp"
            android:layout_height="40dp"
            android:id="@+id/auto_complete_ingredient_container">



            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_ingredients"
                android:gravity="center"
                android:layout_width="220dp"
                android:backgroundTint="@android:color/transparent"
                android:layout_height="50dp">

                <EditText
                    android:id="@+id/auto_complete_ingredient"
                    android:layout_width="220dp"
                    android:backgroundTint="@android:color/transparent"
                    android:layout_height="50dp"
                    android:hint="Type ingredients"
                    android:layout_alignParentLeft="true"
                    android:text=""
...



        </RelativeLayout>

        <Button
            android:id="@+id/add"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:alpha="0.9"
            android:layout_height="40dp"
            android:layout_toRightOf="@id/auto_complete_ingredient_container"
            android:background="@drawable/bg_add_button"
...
                android:padding="6dp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/clear_all_ings_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    android:layout_gravity="right"
                    android:background="@android:color/transparent"
                    android:text="clear"
                    android:textSize="15dp"
                    android:layout_marginRight="2dp"
                    android:textColor="@color/colorPrimaryDark"
                    />

                <android.support.v7.widget.RecyclerView
...
        </ScrollView>

    </LinearLayout>


    <android.support.design.widget.FloatingActionButton
        android:id="@+id/search_recipes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:clickable="true"
        android:elevation="4dp"
        android:src="@drawable/ic_search_"
...
