...
        android:layout_width="wrap_content"
        android:padding="5dp"
        android:layout_height="35dp"
        android:background="@drawable/rounded_bg_filter_icon"/>

    <CheckBox
        android:id="@+id/checkbox"
        android:layout_width="match_parent"
        android:paddingRight="5dp"
        android:paddingLeft="5dp"
        android:layout_toRightOf="@+id/icon_im"
        android:layout_height="35dp"
        android:layout_gravity="start"
...
