...
        <LinearLayout
            android:id="@+id/filter_layout"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <GridView
                android:id="@+id/filter_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:numColumns="2"
                android:paddingLeft="5dp"
                android:paddingRight="5dp" />
            <Button
...
