...
    <!---->


    <!--Select ingredients Fragment -->
    <string name="ingredients">Ingredients</string>
    <string name="search">Search</string>
    <string name="add">Add</string>
    <!---->

    <!-- Select filters Fragment-->
    <string name="filters">Select filters</string>
    <!---->
    <string name="title_activity_splash_screen">SplashScreen</string>
...
